@@ -28,11 +28,13 @@ struct nvme_print_options
   bool drive_info;
   bool smart_check_status;
   bool smart_vendor_attrib;
+  unsigned error_log_entries;
 
   nvme_print_options()
     : drive_info(false),
       smart_check_status(false),
-      smart_vendor_attrib(false)
+      smart_vendor_attrib(false),
+      error_log_entries(0)
     { }
 };
 
