@@ -1,5 +1,11 @@
 $Id$
 
+2016-03-20  Christian Franke  <franke@computer.org>
+
+	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
+	Add option '-l error[,NUM]' for NVMe devices.
+	smartctl.8.in: Document '-l error[,NUM]'.
+
 2016-03-18  Christian Franke  <franke@computer.org>
 
 	Add basic NVMe support for smartctl (-i -H -A) on Linux:
